--- a/src/web/Views/Accounts/Transactions.cshtml
+++ b/src/web/Views/Accounts/Transactions.cshtml
@@ -11,10 +11,10 @@
     <div class="col-12">
         <div>
         <div class="row">
-            <div class="col header">Date</div>
-            <div class="col header">Caption</div>
-            <div class="col header">Amount</div>
-            <div class="col header">Balance</div>
+            <div class="col table-header">Date</div>
+            <div class="col table-header">Caption</div>
+            <div class="col table-header">Amount</div>
+            <div class="col table-header">Balance</div>
         </div>
 
         @foreach(var acc in Model.Transactions)
@@ -23,7 +23,7 @@
                 <div class="col">@acc.Date</div>
                 <div class="col">@acc.Tags.SingleOrDefault(t => t.TypeKey == "payee")?.Caption (@acc.Caption)</div>
                 <div class="col">@acc.Amount €</div>
-                <div class="col">@acc.Balance €</div>
+                <div class="col"><span class="trx-balance @(acc.Balance > 0 ? "positive" : "negative")">@acc.Balance €</span></div>
             </div>
         }
         </div>
