--- a/src/web/Views/Transactions/Details.cshtml
+++ b/src/web/Views/Transactions/Details.cshtml
@@ -8,10 +8,14 @@
 <h2>Transaction @Model.Caption</h2>
 <span class="little">@Model.Id</span>
 
-<form asp-controller="Transactions" asp-action="Update" asp-route-id="@Model.Id" method="post">
+<form asp-controller="Transactions" asp-action="PostDetails" asp-route-id="@Model.Id" method="post">
     <div>
         <label for="date">Date</label>
         <input id="date" asp-for="Date" /> 
+    </div>
+    <div>
+        <label for="user_date">Date utilisateur</label>
+        <input id="user_date" asp-for="UserDate" /> 
     </div>
     <div>
         <label for="caption">Libellé</label>
@@ -22,8 +26,8 @@
         <input id="comment" asp-for="Comment" /> 
     </div>
     <div>
-        <label for="amount">Montant</label>
-        <input id="amount" asp-for="Amount" /> 
+        <label>Montant</label>
+        <span>@Model.Amount</span>
     </div>
     <div>
         <label>Import hash</label>
@@ -45,4 +49,13 @@
         <label>Import file ID</label>
         <span>@Model.ImportFileId</span>
     </div>
+
+    <input type="submit" />
 </form>
+
+<div class="row">
+@foreach(var tag in Model.Tags)
+{
+    <span class="tag">@tag.TypeKey - @tag.Key : @tag.Caption</span>
+}
+</div>
