--- a/src/web/Views/Accounts/Transactions.cshtml
+++ b/src/web/Views/Accounts/Transactions.cshtml
@@ -15,18 +15,18 @@
             <div class="table-row">
                 <div class="table-cell table-header">Caption</div>
                 <div class="table-cell table-header">Amount</div>
-                <div class="table-cell table-header">Balance</div>
             </div>
 
         @foreach(var trxgroup in Model.Transactions)
         {
-            <div class="table-row">
+            <div class="table-row data-header">
                 <div class="table-cell">@trxgroup.Key.ToString("dd MMM")</div>
+                <div class="table-cell"><span class="trx-balance @(trxgroup.First().Balance <= 0 ? "negative" : null)">@trxgroup.First().Balance.ToCurrencyString() @Model.Details.Currency.ToCurrencyString()</span></div>
             </div>
 
             foreach(var trx in trxgroup)
             {
-                <div class="table-row">
+                <div class="table-row data-content">
                     <div class="table-cell">
                         <div class="table-cell-transaction-caption">
                             <a asp-controller="Transactions" asp-action="Details" asp-route-id="@trx.Id">(+)</a>
@@ -44,7 +44,6 @@
                         </div>
                     </div>
                     <div class="table-cell"><span class="trx-amount @(trx.Amount > 0 ? "positive" : null)">@trx.Amount.ToCurrencyString() @Model.Details.Currency.ToCurrencyString()</span></div>
-                    <div class="table-cell"><span class="trx-balance @(trx.Balance <= 0 ? "negative" : null)">@trx.Balance.ToCurrencyString() @Model.Details.Currency.ToCurrencyString()</span></div>
                 </div>
             }
         }
