--- a/src/web/wwwroot/css/site.css
+++ b/src/web/wwwroot/css/site.css
@@ -109,6 +109,11 @@ body {
   display: table-row;
 }
 
+.data-header > .table-cell {
+  background-color: #e9e9e9;
+  border-top: solid 1px gray;
+}
+
 .table-cell{
   display: table-cell;
   vertical-align: middle;
