--- a/src/web/Views/Home/Index.cshtml
+++ b/src/web/Views/Home/Index.cshtml
@@ -6,6 +6,8 @@
 <div class="container">
   <div class="row">
 
+        @if(this.Model != null)
+        {
         <div class="col-12 col-md-6 col-lg-4">
             <h2>Vos avoirs</h2>
             <span>@($"{ViewBag.TotalBalance:0.00} €")</span>
@@ -28,5 +30,8 @@
                 <span class="little">Mis à jour @($"{ViewBag.Updated:g}")</span>
             </div>
         </div>
+        } else {
+            <a asp-controller="Home" asp-action="Login">Connexion</a>
+        }
     </div>
 </div>
