--- a/src/web/wwwroot/css/site.css
+++ b/src/web/wwwroot/css/site.css
@@ -110,8 +110,14 @@ body {
 }
 
 .data-header > .table-cell {
-  background-color: #e9e9e9;
-  border-top: solid 1px gray;
+  background-color: #baf7a252;
+  border-top: solid 2px rgb(90, 189, 115);
+}
+
+.data-header > .table-cell:first-child {
+  border-top-left-radius: 4px;
+  border-left: solid 2px rgb(90, 189, 115);
+  padding-left: 1rem;
 }
 
 .table-cell{
