--- a/src/web/Style/site.scss
+++ b/src/web/Style/site.scss
@@ -9,23 +9,6 @@ a.navbar-brand {
   word-break: break-all;
 }
 
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
-}
-
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
@@ -37,21 +20,6 @@ html {
   }
 }
 
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-}
-
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
-}
 
 /* Sticky footer styles
 -------------------------------------------------- */
@@ -74,7 +42,7 @@ body {
 
 .little {
   font-size: smaller;
-  color: gray;
+  color: $gray-600;
 }
 
 .table-header {
@@ -91,11 +59,11 @@ body {
 }
 
 .positive {
-  color: green;
+  color: $success;
 }
 
 .negative {
-  color: darkred;
+  color: $danger;
 }
 
 .table {
@@ -112,13 +80,13 @@ body {
 }
 
 .data-header > .table-cell {
-  background-color: #baf7a252;
-  border-top: solid 2px rgb(90, 189, 115);
+  background-color: $header-back;
+  //border-top: solid 2px $header-border;
 }
 
 .data-header > .table-cell:first-child {
   border-top-left-radius: 4px;
-  border-left: solid 2px rgb(90, 189, 115);
+  border-left: solid 2px $header-border;
   padding-left: 1rem;
 }
 
@@ -151,7 +119,7 @@ body {
 }
 
 span.tag {
-  border: darkseagreen;
+  border: $header-border;
   border-style: solid;
   border-radius: 5px;
   padding: 0 2px 0 2px;
