--- a/src/web/Style/_common.scss
+++ b/src/web/Style/_common.scss
@@ -1,5 +1,45 @@
 // ****** Classes de base bootstrap
 
+// https://coolors.co/1b264f-213670-274690-576ca8-444c68-302b27-f5f3f5
+
+
+// Your variable overrides
+//$body-bg: #302B27;
+//$body-color: #F5F3F5;
+
+$palette_1: #1B264F;
+$palette_2: #213670;
+$palette_3: #274690;
+$palette_4: #576CA8;
+$palette_5: #444C68;
+$palette_5_light: #E6E8EF;
+$palette_5_lighter: #F3F4F7;
+$palette_6: #302B27;
+$palette_7: #F5F3F5;
+
+$gray-100: #F6F5F4;
+$gray-200: #E3E0DD;
+$gray-300: #D1CCC7;
+$gray-400: #BFB8B0;
+$gray-500: #ACA49A;
+$gray-600: #877C6E;
+$gray-700: #655D53;
+$gray-800: #433E37;
+$gray-900: #221F1C;
+
+
+$header-back: $palette_5_lighter;
+$header-border: $palette_5;
+
+//$primary:       $blue !default;
+//$secondary:     $gray-600 !default;
+//$success:       $green !default;
+//$info:          $cyan !default;
+//$warning:       $yellow !default;
+$danger: #7B0828;
+//$light:         $gray-100 !default;
+//$dark:          $gray-800 !default;
+
 // Contenu nécessaire
 @import "../node_modules/bootstrap/scss/bootstrap";
 @import "../node_modules/bootstrap-select/sass/bootstrap-select.scss";
