--- a/src/web/Views/Shared/_Layout.cshtml
+++ b/src/web/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/lib/jquery-ui/dist/jquery-ui.css" />
     <link rel="stylesheet" href="~/lib/choices.js/dist/styles/choices.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined|Material+Icons">
+    @RenderSection("Stylesheets", required: false)
 </head>
 <body>
     <header>
