--- a/src/web/Views/Payees/Details.cshtml
+++ b/src/web/Views/Payees/Details.cshtml
@@ -5,12 +5,19 @@
     ViewData["Title"] = $"Tiers {Model.Details.Caption}";
 }
 
+@section Stylesheets
+{
+    <link rel="stylesheet" href="~/lib/chart.js/dist/Chart.css" />
+}
+
 <h2>Tiers @Model.Details.Caption</h2>
 <span class="little">@Model.Details.Key</span>
 
 <div class="row">
     <div class="col-12 col-md-6">
         <h3>Statistiques</h3>
+        <canvas id="chartStatistics" width="400" height="400"></canvas>
+
         <div class="table100">
             <div class="table-cell table-header"></div>
             <div class="table-cell table-header">Amount</div>
@@ -50,3 +57,41 @@
         </div>
     </div>
 </div>
+
+
+@section Scripts
+{
+    <script src="~/lib/chart.js/dist/Chart.min.js" ></script>
+
+    <script>
+    var ctx = document.getElementById('chartStatistics').getContext('2d');
+    var myChart = new Chart(ctx, {
+        type: 'bar',
+        data: {
+
+            labels: [ 
+                @Html.Raw(Model.Statistics.Select(s => $"'{s.ToDate().ToString("MMM yy")}'").Aggregate((a, b) => a + ", " + b))
+            ],
+            datasets: [{
+                label: 'Montant',
+                data: [
+                    @Html.Raw(Model.Statistics.Select(s => s.Total.ToString(System.Globalization.CultureInfo.InvariantCulture)).Aggregate((a, b) => a + ", " + b))
+                ],
+                backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                borderColor: 'rgba(255, 99, 132, 1)',
+                borderWidth: 1
+            }]
+        },
+        options: {
+            responsive: true,
+            scales: {
+                yAxes: [{
+                    ticks: {
+                        beginAtZero: true
+                    }
+                }]
+            }
+        }
+    });
+    </script>    
+}
