--- a/src/web/Views/Shared/TagDetails.cshtml
+++ b/src/web/Views/Shared/TagDetails.cshtml
@@ -1,6 +1,6 @@
 @using web.Utils
 
-@model PayeeModel
+@model TagModel
 @{
     ViewData["Title"] = $"Tiers {Model.Details.Caption}";
 }
@@ -48,7 +48,10 @@
                 <div class="table-cell">
                     <div class="table-cell-transaction-caption">
                         <a asp-controller="Transactions" asp-action="Details" asp-route-id="@trx.Id">(+)</a>
-                        <div class="caption">@trx.Caption</div>
+                        @{ var payee = @trx.Tags.SingleOrDefault(t => t.TypeKey == "payee"); }
+                        <div class="caption">
+                            <span alt="@payee?.Key"><a asp-controller="Payees" asp-action="Details" asp-route-key="@payee?.Key">@payee?.Caption</a> @(string.IsNullOrEmpty(trx.Caption) ? string.Empty : $"({trx.Caption})")</span>
+                        </div>
                     </div>
                 </div>
                 <div class="table-cell"><span class="trx-amount @(trx.Amount > 0 ? "positive" : null)">@trx.Amount.ToCurrencyString()</span></div>
