--- a/src/web/Views/Shared/TagDetails.cshtml
+++ b/src/web/Views/Shared/TagDetails.cshtml
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="~/lib/chart.js/dist/Chart.css" />
 }
 
-<h2>Tiers @Model.Details.Caption</h2>
+<h2>@Model.Details.TypeKey @Model.Details.Caption</h2>
 <span class="little">@Model.Details.Key</span>
 
 <div class="row">
