--- a/src/web/Views/Shared/TagDetails.cshtml
+++ b/src/web/Views/Shared/TagDetails.cshtml
@@ -14,6 +14,10 @@
 <span class="little">@Model.Details.Key</span>
 
 <div class="row">
+    <a asp-controller="Tags" asp-action="Merge" asp-route-tagType="@Model.Details.TypeKey" asp-route-tagKey="@Model.Details.Key">Fusionner</a></div>
+</div>
+
+<div class="row">
     <div class="col-12 col-md-6">
         <h3>Statistiques</h3>
         <canvas id="chartStatistics" width="400" height="400"></canvas>
