--- a/src/web/Views/Shared/_SingleTransaction.cshtml
+++ b/src/web/Views/Shared/_SingleTransaction.cshtml
@@ -27,14 +27,14 @@
         <div class="table-cell-transaction-caption">
             <a asp-controller="Transactions" asp-action="Details" asp-route-id="@Model.Id">(+)</a>
 
-            @{ var payee = @Model.Tags.SingleOrDefault(t => t.TypeKey == "payee"); }
+            @{ var payee = @Model.TransactionTags.SingleOrDefault(t => t.TagTypeKey == "payee"); }
             <div class="caption">
-                <span alt="@payee?.Key"><a asp-controller="Payees" asp-action="Details" asp-route-key="@payee?.Key">@payee?.Caption</a> @(string.IsNullOrEmpty(Model.Caption) ? string.Empty : $"({Model.Caption})")</span>
+                <span alt="@payee?.TagKey"><a asp-controller="Payees" asp-action="Details" asp-route-key="@payee?.TagKey">@payee?.TagCaption</a> @(string.IsNullOrEmpty(Model.Caption) ? string.Empty : $"({Model.Caption})")</span>
             </div>
             <div class="taglist">
-                @foreach(var tag in Model.Tags.Where(t => t.TypeKey != "payee"))
+                @foreach(var tag in Model.TransactionTags.Where(t => t.TagTypeKey != "payee"))
                 {
-                    <span alt="@tag.TypeKey : @tag.Key" class="tag"><a asp-controller="Tags" asp-action="Details" asp-route-tagType="@tag.TypeKey" asp-route-tagKey="@tag.Key">@(!string.IsNullOrWhiteSpace(tag.Caption) ? tag.Caption : tag.Key)</a></span>
+                    <span alt="@tag.TagTypeKey : @tag.TagKey" class="tag"><a asp-controller="Tags" asp-action="Details" asp-route-tagType="@tag.TagTypeKey" asp-route-tagKey="@tag.TagKey">@(!string.IsNullOrWhiteSpace(tag.TagCaption) ? tag.TagCaption : tag.TagKey)</a></span>
                 }
             </div>
         </div>
