--- a/src/web/Views/Rules/Create.cshtml
+++ b/src/web/Views/Rules/Create.cshtml
@@ -25,28 +25,39 @@
                     <div class="table-cell table-header">Actions</div>
                 </div>
 
-                <div class="table-row">
+                <div class="table-row" data-conditions-count="Model.Conditions.Count()">
                     <div class="table-cell">
                         <div class="table100">
                         @for(int ic = 0; ic < Model.Conditions.Count(); ic++)
                         {
                             var condition = Model.Conditions.ElementAt(ic);
-                            <div class="table-cell">
-                                @(ic + 1)
-                            </div>
+                            var rowId = $"rowConditions_{ic}";
 
-                            <div class="table-row">
+                            <div class="table-row" id="@rowId">
                                 <div class="table-cell">
-                                    <select asp-for="Conditions.ElementAt(ic).FieldType" name="Conditions[@ic].FieldType">
+                                    @(ic + 1)
+                                </div>
+                                <div class="table-cell fieldtype">
+                                    <select asp-for="Conditions.ElementAt(ic).FieldType" name="Conditions[@ic].FieldType" onchange="onConditionFieldTypeChanged(this, @ic);">
                                         <option value="0">Data field</option>
                                         <option value="1">Tag</option>
                                     </select>
+                                </div>
+                                <div class="table-cell fieldname">
+                                   
+                                </div>
+                                <div>
                                     <input type="text" asp-for="Conditions.ElementAt(ic).FieldName" name="Conditions[@ic].FieldName" />
                                     <input type="text" asp-for="Conditions.ElementAt(ic).ValueOperator" name="Conditions[@ic].ValueOperator" />
                                     <input type="text" asp-for="Conditions.ElementAt(ic).Value" name="Conditions[@ic].Value" />
                                 </div>
                             </div>
                         }
+                            <div class="table-row">
+                                <div class="table-cell">
+                                    <button onclick="addCondition">Ajouter une condition</button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="table-cell">
@@ -81,4 +92,43 @@
 
 @section Scripts
 {
+<script lang="javascript">
+
+    $(document).ready(function() {
+        refreshConditionsFieldType(0);  // TODO : toutes les conditions (boucle avec data-conditions-count)
+    });
+
+    function onConditionFieldTypeChanged(source, conditionIndex) {
+        refreshConditionsFieldType(conditionIndex);
+    }
+
+    function refreshConditionsFieldType(conditionIndex) {
+        var rowAccessor = "#rowConditions_"+conditionIndex;
+        var fieldType = $('select[name ="Conditions['+conditionIndex+'].FieldType"] option[selected]').val();
+        var url = "";
+
+        if(fieldType == "1") {
+            url = '/rules/selecttagtypes?mode=Conditions&field=FieldName&index=' + conditionIndex;
+        } else {
+            url = '/rules/selectfields?mode=Conditions&field=FieldName&index=' + conditionIndex;
+        }
+
+        $(rowAccessor + ' .fieldname').load(url, function(responseText, textStatus, jqXHR ) {
+            //alert(textStatus);
+        });
+    }
+
+    function onConditionsFieldNameChanged(source, conditionIndex) {
+        //refreshConditionsFieldName(conditionIndex);
+    }
+
+    function refreshConditionsFieldName(conditionIndex) {
+        /*var rowAccessor = "#rowConditions_"+conditionIndex;
+
+        $(rowAccessor + ' .fieldname').load('/rules/selecttagtypes?mode=Conditions&field=FieldName&index=' + conditionIndex, function(responseText, textStatus, jqXHR ) {
+            //alert(textStatus);
+        });*/
+    }
+
+</script>
 }
